Verifying publishers for books